--- a/SpikaEnterprise/res/layout/item_category.xml
+++ b/SpikaEnterprise/res/layout/item_category.xml
@@ -11,36 +11,35 @@
         android:layout_marginLeft="5dp">
 
         <LinearLayout
+            android:id="@+id/llLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/imageLayoutControl"
-            android:layout_toRightOf="@+id/imageLayout"
             android:padding="5dp"
             android:orientation="vertical">
 
             <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                 android:id="@+id/categoryName"
+                android:paddingLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
+        
+        <View android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="5dp"
+            android:background="@color/light_light_gray"
+            android:layout_alignLeft="@id/llLayout"
+            android:layout_below="@id/llLayout"/>
 
-        <RelativeLayout
-            android:id="@+id/imageLayoutControl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/imageLayout"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@id/imageLayout"
-            android:background="@drawable/icon_tablearrow">
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
