--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
-    android:background="@color/transparent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <RelativeLayout
