--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/no_messages"
-            android:textColor="@color/default_blue"
+            android:textColor="@color/white"
             android:textSize="30sp"
             android:visibility="gone" />
 
