--- a/SpikaEnterprise/res/layout/activity_photo.xml
+++ b/SpikaEnterprise/res/layout/activity_photo.xml
@@ -58,6 +58,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/default_blue_light" />
+        
+        <WebView android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <ProgressBar
             android:id="@+id/pbLoading"
