--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -395,6 +395,7 @@
             android:id="@+id/rlDrawerEmoji"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:background="@android:color/white"
             android:layout_alignParentBottom="true"
             android:visibility="gone" >
 
