--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -129,7 +129,7 @@
                 android:padding="5dp"
                 android:scrollbars="vertical"
                 android:singleLine="false" />
-
+            
             <ImageButton
                 android:id="@+id/footerSmiley"
                 android:layout_width="wrap_content"
@@ -142,6 +142,20 @@
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/smiley_icon" />
+            
+            <ImageButton
+                android:id="@+id/footerSend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:src="@drawable/send_button" />
         </RelativeLayout>
 
         <View
