--- a/SpikaEnterprise/res/layout/activity_record_video.xml
+++ b/SpikaEnterprise/res/layout/activity_record_video.xml
@@ -41,6 +41,17 @@
             android:contentDescription="@null"
             android:scaleType="centerInside"
             android:src="@android:drawable/ic_menu_send" />
+        
+        <ImageButton
+            android:id="@+id/shareVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="20dp"
+            android:src="@drawable/button_share"
+            android:visibility="invisible" />
     </RelativeLayout>
 
     <View
