--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -110,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    <github.ankushsachdeva.emojicon.EmojiconTextView
                         android:id="@+id/meMsgContent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -304,7 +304,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
 
-                        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                        <github.ankushsachdeva.emojicon.EmojiconTextView
                             android:id="@+id/youMsgContent"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
