--- a/SpikaEnterprise/res/layout/item_thread_message.xml
+++ b/SpikaEnterprise/res/layout/item_thread_message.xml
@@ -39,7 +39,7 @@
             android:gravity="left"
             android:orientation="horizontal" >
 
-            <TextView
+            <github.ankushsachdeva.emojicon.EmojiconTextView
                 android:id="@+id/text_view_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
