--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -68,13 +68,12 @@
             android:gravity="right"
             android:orientation="horizontal" >
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="10dp"
                 android:gravity="bottom"
-                android:minHeight="50dp"
                 android:orientation="vertical" >
 
                 <ImageView
@@ -82,6 +81,7 @@
                     android:layout_width="20dp"
                     android:layout_height="17dp"
                     android:layout_gravity="right|top"
+                    android:layout_alignRight="@+id/timeMe"
                     android:layout_marginBottom="10dp"
                     android:contentDescription="@null"
                     android:src="@drawable/right_thread_arrow" />
@@ -90,9 +90,10 @@
                     android:id="@+id/timeMe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:textColor="@color/text_time_gray"
                     android:textSize="15sp" />
-            </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/defaultMsgLayoutMe"
@@ -444,9 +445,9 @@
                         android:textSize="17sp" />
                 </LinearLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="bottom"
                     android:layout_marginRight="10dp"
                     android:gravity="left|bottom"
@@ -458,6 +459,7 @@
                         android:layout_width="20dp"
                         android:layout_height="17dp"
                         android:layout_gravity="left|top"
+                        android:layout_alignLeft="@+id/timeYou"
                         android:layout_marginBottom="10dp"
                         android:contentDescription="@null"
                         android:src="@drawable/left_thread_arrow" />
@@ -466,9 +468,10 @@
                         android:id="@+id/timeYou"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
                         android:textColor="@color/text_time_gray"
                         android:textSize="15sp" />
-                </LinearLayout>
+                </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
 
