--- a/SpikaEnterprise/res/layout/item_people.xml
+++ b/SpikaEnterprise/res/layout/item_people.xml
@@ -4,12 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent" >
+    
+    <LinearLayout
+        android:id="@+id/callControl"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:background="#f123d1"
+        android:visibility="invisible" >
+
+        <TextView
+            android:id="@+id/videoCall"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/red_in_people_row"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="Video"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/voiceCall"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/green_in_people_row"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="Call"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/openChat"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/blue_in_people_row"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="Chat"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/clickLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" >
+        android:background="@android:color/white" >
 
         <com.clover.spika.enterprise.chat.views.RoundImageView
             android:id="@+id/item_image"
@@ -22,24 +70,25 @@
         <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
             android:id="@+id/item_name"
             android:layout_width="match_parent"
-            android:gravity="center_vertical"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="25dp"
             android:layout_toRightOf="@id/item_image"
             android:ellipsize="end"
-            android:paddingLeft="5dp"
-            android:layout_marginLeft="25dp"
+            android:gravity="center_vertical"
             android:maxLines="1"
+            android:paddingLeft="5dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
-        
-        <View android:layout_width="match_parent"
-            android:layout_alignLeft="@id/item_name"
-            android:layout_marginTop="5dp"
+
+        <View
+            android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_alignLeft="@id/item_name"
             android:layout_below="@id/item_image"
-            android:background="@color/light_light_gray"/>
+            android:layout_marginTop="5dp"
+            android:background="@color/light_light_gray" />
     </RelativeLayout>
 
 </RelativeLayout>
